solve minor bugs

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,11 @@
 /notebook
 /models
 /random_stuff
-actions/__pycache__
-server/__pycache__
+*__pycache__
 env
 .env
 venv
 .rasa 
 model_report.md
 /MYDATA
+.~lock*
