--- a/domain.yml
+++ b/domain.yml
@@ -11,6 +11,7 @@ intents:
   - que_travel_distance_time
   - que_places_to_visit
   - que_restaurent
+  - que_beaches
 
 responses:
   utter_greet:
@@ -40,3 +41,4 @@ actions:
   - action_travel_distance_time
   - action_hello_world
   - action_restaurent
+  - beaches_beaches
