--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -197,4 +197,16 @@ nlu:
     - Are there any beaches in Goa where I can go paragliding?
     - Which beaches in Goa have hotels and resorts nearby?
 
+- intent: que_sightseeing
+  examples: |
+    - What is the Basilica of Bom Jesus?
+    - Where is the Se Cathedral located?
+    - What is the significance of the Golden Bell in the Se Cathedral?
+    - Can you recommend a Hindu temple to visit in Goa?
+    - Which fort in Goa has a lighthouse and offers views of the Arabian Sea?
+    - Where is the Chapora Fort located?
+    - What is the specialty of the Reis Magos Fort?
+    - What is Ancestral Goa and where is it located?
+    - What can I expect to see at the Goa State Museum?
+    - Are there any other museums in Goa apart from the Goa State Museum and Ancestral Goa?
 
